# pdaXrom

./: .toolchain  BUGS  Kconfig  Makefile  Makefile.am  README.md  build-archos605-crosstools.sh  build-archos605.sh  build-crosstools-arm-gnueabi.sh  build-crosstools-arm-uclibcgnueabi.sh  build-crosstools-ps3-64.sh  build-crosstools.sh  build-itelec610-basic.sh  build-linux-arm-gnueabi.sh  build-linux-basic-arm.sh  build-linux-basic-mipsel.sh  build-linux-basic-ps3.sh  build-linux-basic-uclibc-arm.sh  build-linux-basic-uclibc-ps3.sh  build-linux-basic.sh  build-linux-dev-ps3-64.sh  build-linux-dev-ps3.sh  build-linux-dev-yeeloong-n32.sh  build-linux-mipsel.sh  build-linux-pcio-client-ps3.sh  build-linux-pcio-client.sh  build-linux-sdlmame-x11-ps3.sh  build-linux-x86-64.sh  build-linux.sh  build-pdaxrom-akita-basic-arm-gnueabi.sh  build.sh  configure.ac  keyboard-tray.c  netconfig.fl  netconfig.h  netdevices.cxx  parse-kboot.c  pngdec.c  ptxconfig  readconf.c  (+4 more)
Documentation/: TARGETS
appletv/: build-atv-linux.sh
boardconfigs/: akita.full  akita.light  corgi.full  davinci.light  eit610-eabi-2.6.25.full  eit610-rev1.full  eit610-rev1.light  phycore-pxa270.full  phycore-pxa270.light  qemuarm.full  qemuarm.light
config/: Config.in
danceboard/: Makefile  board.h  font.c  font.h  image.c  image.h  main.c
dancesplash/: Makefile  main.c
docs/: README.i686  README.yeeloong  README.yeeloong-n32
documentation/: QuickStart-en.odt  QuickStart-rus.odt
generic/: asound.state.PS3  dancesplash.conf  defaults.list  shutdown
iphone/: build-psfreedom-ipod.sh
kernelconfigs/: akita_default.target  corgi_default.target  davinci_default.target  eit610-2.6.25.target  eit610-rev1.target  kernelconfig.native  kernelconfig_full.target  qemuarm-2.6.23.config
minidesk-utils/: AUTHORS  Makefile.in  config.h.in  configure
minidesk-utils/netconfig/: Makefile.am  Makefile.in  minidesk-netconfig.desktop  netconfig.c  netconfig.desktop  netconfig.glade
minidesk-utils/pppconfig/: Makefile.am  Makefile.in  minidesk-pppconfig.desktop  pppconfig.c  pppconfig.glade
minimount/: Makefile  minimount  minimount-udev.c
netconfig/: Makefile  netconfig.c  netconfig.desktop  netconfig.glade
pdaXrom-ng/: BUGS  build-crosstools-ps3.sh  build-crosstools-ps3boot.sh  build-crosstools-x86-64.sh  build-crosstools-yeeloong-n32.sh  build-crosstools.sh  build-linux-basic-mipsel-yeeloong.sh  build-linux-basic-ps3-64.sh  build-linux-basic-ps3.sh  build-linux-basic-uclibc-mipsel.sh  build-linux-basic-uclibc-ps3.sh  build-linux-basic-uclibc.sh  build-linux-basic-yeeloong-n32.sh  build-linux-basic-yeeloong.sh  build-linux-basic.sh  build-linux-dev-ps3.sh  build-linux-dev-x86-64.sh  build-linux-dev-yeeloong-n32.sh  build-linux-dev-yeeloong.sh  build-linux-dev.sh  build-linux-dfb-ps3.sh  build-linux-mipsel-yeeloong.sh  build-linux-pcio-client-ps3.sh  build-linux-pcio-client-x86-64.sh  build-linux-pcio-client-yeelong.sh  build-linux-pcio-client-yeeloong.sh  build-linux-ps3-64.sh  build-linux-ps3-fast-boot.sh  build-linux-ps3.sh  build-linux-sdlmame-dfb-ps3.sh  build-linux-sdlmame-x11-ps3.sh  build-linux-uclibc-directfb-ps3.sh  build-linux-x86-64.sh  build-linux-yeeloong-n32.sh  build-linux-yeeloong.sh  build-linux.sh  build-ps3-boot-bt.sh  build-ps3-boot-fastboot.sh  build.sh
ps3boot/: devices.c  devices.h  image.c  jpegdec.c  main.c  parse-config.c  ps3boot-udev.c  ui-linuxfb.c
rcontrol/: Makefile  main.c  msp430lib.h  rcontrol.init  uinputdev.c
rules/: Kconfig  LVM2.sh  MesaLib.sh  NEWPACKET  Rules-addon.make  Rules.make  SDL-directfb.sh  SDL_image.sh  Virtual.make  WebKit-directfb.sh  Xdialog.sh  a52dec.sh  acpid.sh  acpitool.sh  alsa-lib.sh  alsa-utils.sh  apr-util.sh  aqualung.sh  arora.sh  aterm.in  aterm.make  barebox.sh  bigreqsproto.sh  bluez-libs3.sh  bluez.sh  boards.in  boost.sh  busybox.make  cairo-directfb.sh  cairo-dock-plugins.sh  cairo.in  cairo.make  cairo.sh  cairomm.sh  clearlooks.sh  compositeproto.sh  console-tools.in  console-tools.make  core.sh  create_epc700.sh  (+361 more)
rules-ipk/: BasiliskII.make  Battery-Status.make  Clock.make  Dev86src.make  ORBit2.in  ORBit2.make  Pager.make  PcsxSrc.make  PeopsSpu.make  ROX-Session.make  SDL_perl.make  TiMidity.make  aMule.make  allegro.make  alsa-driver.make  alsa-lib.make  alsa-utils.in  alsa-utils.make  alsamixergui.make  atd.make  aterm.make  atk124.make  bison.make  blackbox.make  bluez-libs.make  bluez-sdp.make  bluez-utils.make  bmon.make  cairo.make  camstream.make  cdrtools.make  cfxga.make  circuslinux.make  cpuoverclock.make  cups.make  curl.make  datentime.make  datentime2.make  dbus-glib.make  ddcxinfo-kanotix.make  (+203 more)
samsung-spica/: build-linux-basic-uclibc.sh
sets/: packages-acpi.inc  packages-aqualung.inc  packages-bluez3.inc  packages-cups.inc  packages-devel.inc  packages-dfb-gtk2.inc  packages-dfbgui.inc  packages-diskutils.inc  packages-eina.inc  packages-emu-mame-qmc2.inc  packages-emu-mame.inc  packages-emu-n64.inc  packages-firefox.inc  packages-gconf.inc  packages-gnash.inc  packages-gparted.inc  packages-gstreamer.inc  packages-gtkdialog.inc  packages-hal.inc  packages-host-squashfs.inc  packages-host-squashfs4.inc  packages-madplay.inc  packages-mc.inc  packages-minimal.inc  packages-pcio-client.sh  packages-pidgin.inc  packages-simplenx-client.sh  packages-usplash.inc  packages-webserver.inc  packages-x-apps.inc  packages-x-gtk2.inc  packages-x-gtkmm.inc  packages-x-office.inc  packages-x-voip.inc  packages-xorg-apps.inc  packages-xorg-drivers-full.inc  packages-xorg-drivers.inc  packages-xorg-fonts.inc  packages-xorg-qt4.inc  packages-xorg-xlib.inc  (+1 more)
sixaxisd/: 99-sixaxisd.rules  Makefile  sixsrv.c  uinputdev.c
sms-util/: Makefile  (+1 more)
sn-monitor/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
trunk/minidesk-utils/: Makefile.am  Makefile.in  configure.ac
trunk/minidesk-utils/logout/: Makefile.am  Makefile.in  logout.c
trunk/minidesk-utils/netconfig/: netconfig.c  netconfig.glade
trunk/minidesk-utils/pppconfig/: pppconfig.c  pppconfig.glade
trunk/sn-monitor/: Makefile.in  configure.ac  sn-monitor.c
(+6759 files in other folders)
